# lcc-license-generator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: lcc-config.cmake
include/olm/: common.h
scripts/: apply-format
src/: build_properties.h.in
src/base_lib/: CMakeLists.txt  CryptoHelper.cpp  base.h  base64.cpp  base64.h  crypto_helper.cpp  crypto_helper.hpp
src/base_lib/linux/: CryptoHelperLinux.cpp  CryptoHelperLinux.h  test.text
src/base_lib/openssl/: crypto_helper_ssl.cpp  crypto_helper_ssl.hpp
src/base_lib/win/: CryptoHelperWindows.cpp  CryptoHelperWindows.h  example.txt
src/ini/: CMakeLists.txt  ConvertUTF.cpp  ConvertUTF.h  SimpleIni.h
src/inja/: inja.hpp
src/inja/nlohmann/: json.hpp
src/license_generator/: CMakeLists.txt  command_line-parser.cpp  command_line-parser.hpp  license-generator.cpp  license-generator.h  license.cpp  license.hpp  open-license-main.cpp  product.cpp  product.hpp  project.cpp  project.hpp
test/: CMakeLists.txt  command-line_test.cpp  cout_redirect.hpp  cryptohelper_test.cpp  license-generator_test.cpp  license_test.cpp  product_test.cpp  project_test.cpp
test/data/: data.txt  private-key-pkcs8.der  private_key-linux.rsa  private_key.rsa  public_key.rsa
test/data/src/templates/: public_key.inja
